--- a/application.properties
+++ b/application.properties
@@ -11,9 +11,9 @@ spring.redis.host=localhost
 spring.redis.port=6379
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/your_database
-spring.datasource.username=your_username
-spring.datasource.password=your_password
+spring.datasource.url=jdbc:postgresql://localhost:5432/playermakerdb
+spring.datasource.username=playermakerdb
+spring.datasource.password=playermakerdb
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
