--- a/facade-service.properties
+++ b/facade-service.properties
@@ -1,12 +1,5 @@
-# Kafka Configuration
-spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=facade-service-group
-spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
 # Redis Configuration
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.redis.host=${REDIS_HOST}
+spring.redis.port=${REDIS_PORT}
