--- a/save-to-db-service.properties
+++ b/save-to-db-service.properties
@@ -1,20 +1,13 @@
-# Kafka Configuration
-spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=save-to-db-service-group
-spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
-# Redis Configuration 
-spring.redis.host=localhost
-spring.redis.port=6379
+# Redis Configuration
+spring.redis.host=${REDIS_HOST}
+spring.redis.port=${REDIS_PORT}
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/your_database
-spring.datasource.username=your_username
-spring.datasource.password=your_password
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
